--- a/Software-for-Filling-Station.csproj
+++ b/Software-for-Filling-Station.csproj
@@ -132,6 +132,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Database1DataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Database1DataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet2.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Inventory.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +168,12 @@
     </Compile>
     <Compile Include="Sales.Designer.cs">
       <DependentUpon>Sales.cs</DependentUpon>
+    </Compile>
+    <Compile Include="salesTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="salesTest.Designer.cs">
+      <DependentUpon>salesTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Sign-Up.cs">
       <SubType>Form</SubType>
@@ -203,6 +214,9 @@
     <EmbeddedResource Include="Sales.resx">
       <DependentUpon>Sales.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="salesTest.resx">
+      <DependentUpon>salesTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sign-Up.resx">
       <DependentUpon>Sign-Up.cs</DependentUpon>
     </EmbeddedResource>
@@ -231,6 +245,17 @@
     </None>
     <None Include="Database1DataSet1.xss">
       <DependentUpon>Database1DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet2.xsc">
+      <DependentUpon>Database1DataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet2.xss">
+      <DependentUpon>Database1DataSet2.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
