--- a/Software-for-Filling-Station.csproj
+++ b/Software-for-Filling-Station.csproj
@@ -122,6 +122,30 @@
     <Compile Include="Accounts.Designer.cs">
       <DependentUpon>Accounts.cs</DependentUpon>
     </Compile>
+    <Compile Include="Add_New_Employees.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_New_Employees.Designer.cs">
+      <DependentUpon>Add_New_Employees.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add_New_Supervisors.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_New_Supervisors.Designer.cs">
+      <DependentUpon>Add_New_Supervisors.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Attendance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Attendance.Designer.cs">
+      <DependentUpon>Attendance.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Attendance2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Attendance2.Designer.cs">
+      <DependentUpon>Attendance2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Database1DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -146,6 +170,31 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Database1DataSet12.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSet13.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet13.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSet14.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet14.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSet15.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet15.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSet16.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet16.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSet17.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet17.xsd</DependentUpon>
     </Compile>
     <Compile Include="Database1DataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -219,6 +268,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Salary.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Salary.Designer.cs">
+      <DependentUpon>Salary.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sales.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -252,6 +307,18 @@
     <EmbeddedResource Include="Accounts.resx">
       <DependentUpon>Accounts.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Add_New_Employees.resx">
+      <DependentUpon>Add_New_Employees.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_New_Supervisors.resx">
+      <DependentUpon>Add_New_Supervisors.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Attendance.resx">
+      <DependentUpon>Attendance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Attendance2.resx">
+      <DependentUpon>Attendance2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Homepage.resx">
       <DependentUpon>Homepage.cs</DependentUpon>
     </EmbeddedResource>
@@ -276,6 +343,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Salary.resx">
+      <DependentUpon>Salary.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sales.resx">
       <DependentUpon>Sales.cs</DependentUpon>
     </EmbeddedResource>
@@ -346,6 +416,61 @@
     </None>
     <None Include="Database1DataSet12.xss">
       <DependentUpon>Database1DataSet12.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet13.xsc">
+      <DependentUpon>Database1DataSet13.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet13.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet13.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet13.xss">
+      <DependentUpon>Database1DataSet13.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet14.xsc">
+      <DependentUpon>Database1DataSet14.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet14.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet14.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet14.xss">
+      <DependentUpon>Database1DataSet14.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet15.xsc">
+      <DependentUpon>Database1DataSet15.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet15.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet15.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet15.xss">
+      <DependentUpon>Database1DataSet15.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet16.xsc">
+      <DependentUpon>Database1DataSet16.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet16.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet16.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet16.xss">
+      <DependentUpon>Database1DataSet16.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet17.xsc">
+      <DependentUpon>Database1DataSet17.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet17.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet17.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet17.xss">
+      <DependentUpon>Database1DataSet17.xsd</DependentUpon>
     </None>
     <None Include="Database1DataSet2.xsc">
       <DependentUpon>Database1DataSet2.xsd</DependentUpon>
