--- a/Software-for-Filling-Station.csproj
+++ b/Software-for-Filling-Station.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.props" Condition="Exists('packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.props')" />
+  <Import Project="packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.props" Condition="Exists('packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -103,13 +103,13 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Xamarin.Forms.5.0.0.2012\lib\netstandard2.0\Xamarin.Forms.Core.dll</HintPath>
+      <HintPath>packages\Xamarin.Forms.5.0.0.2662\lib\netstandard2.0\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Platform, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Xamarin.Forms.5.0.0.2012\lib\netstandard2.0\Xamarin.Forms.Platform.dll</HintPath>
+      <HintPath>packages\Xamarin.Forms.5.0.0.2662\lib\netstandard2.0\Xamarin.Forms.Platform.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Xaml, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Xamarin.Forms.5.0.0.2012\lib\netstandard2.0\Xamarin.Forms.Xaml.dll</HintPath>
+      <HintPath>packages\Xamarin.Forms.5.0.0.2662\lib\netstandard2.0\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="Xander.UI.Web, Version=1.0.0.19, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Xander.UI.Web.0.1.19\lib\net40\Xander.UI.Web.dll</HintPath>
@@ -121,6 +121,12 @@
     </Compile>
     <Compile Include="Accounts.Designer.cs">
       <DependentUpon>Accounts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add_New_Accountant.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_New_Accountant.Designer.cs">
+      <DependentUpon>Add_New_Accountant.cs</DependentUpon>
     </Compile>
     <Compile Include="Add_New_Employees.cs">
       <SubType>Form</SubType>
@@ -139,12 +145,6 @@
     </Compile>
     <Compile Include="Attendance.Designer.cs">
       <DependentUpon>Attendance.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Attendance2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Attendance2.Designer.cs">
-      <DependentUpon>Attendance2.cs</DependentUpon>
     </Compile>
     <Compile Include="Database1DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -196,10 +196,25 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Database1DataSet17.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Database1DataSet181.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet18.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSet191.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet19.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Database1DataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Database1DataSet2.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSet201.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSet20.xsd</DependentUpon>
     </Compile>
     <Compile Include="Database1DataSet3.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -235,6 +250,16 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Database1DataSet9.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSetAttendances.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSetAttendances.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database1DataSetSalaries.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database1DataSetSalaries.xsd</DependentUpon>
     </Compile>
     <Compile Include="Inventory.cs">
       <SubType>Form</SubType>
@@ -307,6 +332,9 @@
     <EmbeddedResource Include="Accounts.resx">
       <DependentUpon>Accounts.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Add_New_Accountant.resx">
+      <DependentUpon>Add_New_Accountant.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Add_New_Employees.resx">
       <DependentUpon>Add_New_Employees.cs</DependentUpon>
     </EmbeddedResource>
@@ -315,9 +343,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Attendance.resx">
       <DependentUpon>Attendance.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Attendance2.resx">
-      <DependentUpon>Attendance2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Homepage.resx">
       <DependentUpon>Homepage.cs</DependentUpon>
@@ -472,6 +497,28 @@
     <None Include="Database1DataSet17.xss">
       <DependentUpon>Database1DataSet17.xsd</DependentUpon>
     </None>
+    <None Include="Database1DataSet18.xsc">
+      <DependentUpon>Database1DataSet18.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet18.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet181.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet18.xss">
+      <DependentUpon>Database1DataSet18.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet19.xsc">
+      <DependentUpon>Database1DataSet19.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet19.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet191.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet19.xss">
+      <DependentUpon>Database1DataSet19.xsd</DependentUpon>
+    </None>
     <None Include="Database1DataSet2.xsc">
       <DependentUpon>Database1DataSet2.xsd</DependentUpon>
     </None>
@@ -482,6 +529,17 @@
     </None>
     <None Include="Database1DataSet2.xss">
       <DependentUpon>Database1DataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet20.xsc">
+      <DependentUpon>Database1DataSet20.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSet20.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSet201.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSet20.xss">
+      <DependentUpon>Database1DataSet20.xsd</DependentUpon>
     </None>
     <None Include="Database1DataSet3.xsc">
       <DependentUpon>Database1DataSet3.xsd</DependentUpon>
@@ -560,6 +618,28 @@
     <None Include="Database1DataSet9.xss">
       <DependentUpon>Database1DataSet9.xsd</DependentUpon>
     </None>
+    <None Include="Database1DataSetAttendances.xsc">
+      <DependentUpon>Database1DataSetAttendances.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSetAttendances.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSetAttendances.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSetAttendances.xss">
+      <DependentUpon>Database1DataSetAttendances.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSetSalaries.xsc">
+      <DependentUpon>Database1DataSetSalaries.xsd</DependentUpon>
+    </None>
+    <None Include="Database1DataSetSalaries.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database1DataSetSalaries.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database1DataSetSalaries.xss">
+      <DependentUpon>Database1DataSetSalaries.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -596,14 +676,14 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="packages\Microsoft.Web.WebView2.1.0.2420.47\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.2420.47\build\Microsoft.Web.WebView2.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.props'))" />
-    <Error Condition="!Exists('packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.targets'))" />
     <Error Condition="!Exists('packages\Microsoft.Web.WebView2.1.0.2420.47\build\Microsoft.Web.WebView2.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.Web.WebView2.1.0.2420.47\build\Microsoft.Web.WebView2.targets'))" />
+    <Error Condition="!Exists('packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.props'))" />
+    <Error Condition="!Exists('packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.targets'))" />
   </Target>
-  <Import Project="packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.targets" Condition="Exists('packages\Xamarin.Forms.5.0.0.2012\build\Xamarin.Forms.targets')" />
-  <Import Project="packages\Microsoft.Web.WebView2.1.0.2420.47\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.2420.47\build\Microsoft.Web.WebView2.targets')" />
+  <Import Project="packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.targets" Condition="Exists('packages\Xamarin.Forms.5.0.0.2662\build\Xamarin.Forms.targets')" />
 </Project>
